--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.7", "3.8", "3.9", "3.10", "3.11"]
+        python-version: ["3.7", "3.8", "3.9"]
 
     steps:
     - uses: actions/checkout@v3
@@ -40,20 +40,20 @@ jobs:
       run: mypy module
 
 
-  notification:
-    name: Telegram Notification
-    runs-on: ubuntu-latest
-    steps:
+  #notification:
+    #name: Telegram Notification
+    #runs-on: ubuntu-latest
+    #steps:
 
-      - name: Send telegram message on push
-        uses: appleboy/telegram-action@master
-        with:
-          to: ${{ secrets.TELEGRAM_TO }}
-          token: ${{ secrets.TELEGRAM_TOKEN }}
-          message: |
-            ${{ github.actor }} created commit:
-            Commit message: ${{ github.event.commits[0].message }}
+      #- name: Send telegram message on push
+        #uses: appleboy/telegram-action@master
+        #with:
+          #to: ${{ secrets.TELEGRAM_TO }}
+          #token: ${{ secrets.TELEGRAM_TOKEN }}
+          #message: |
+            #${{ github.actor }} created commit:
+            #Commit message: ${{ github.event.commits[0].message }}
             
-            Repository: ${{ github.repository }}
+            #Repository: ${{ github.repository }}
             
-            See changes: https://github.com/${{ github.repository }}/commit/${{github.sha}}
+            #See changes: https://github.com/${{ github.repository }}/commit/${{github.sha}}
