--- a/requirements.txt
+++ b/requirements.txt
@@ -26,7 +26,7 @@ flake8-rst-docstrings==0.3.0
 flake8-string-format==0.3.0
 gitdb==4.0.10
 GitPython==3.1.31
-isort==5.12.0
+isort==6.0.0b2
 Jinja2==3.1.2
 markdown-it-py==3.0.0
 MarkupSafe==2.1.3
