--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,7 @@ flake8-debugger==4.1.2
 flake8-docstrings==1.7.0
 flake8-eradicate==1.4.0
 flake8-html==0.4.3
-flake8-isort==6.0.0
+flake8-isort<6
 flake8-quotes==3.3.2
 flake8-rst-docstrings==0.3.0
 flake8-string-format==0.3.0
