--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 astor==0.8.1
-attrs==23.1.0
+attrs
 bandit==1.7.5
 cachetools==5.3.1
 chardet==5.1.0
@@ -10,19 +10,19 @@ distlib==0.3.6
 docutils==0.20.1
 eradicate==2.3.0
 filelock==3.12.2
-flake8==5.0.4
-flake8-bandit==4.1.1
-flake8-broken-line==0.6.0
-flake8-bugbear==23.3.12
-flake8-commas==2.1.0
-flake8-comprehensions==3.13.0
-flake8-debugger==4.1.2
-flake8-docstrings==1.7.0
-flake8-eradicate==1.4.0
-flake8-html==0.4.3
-flake8-isort<6
-flake8-quotes==3.3.2
-flake8-rst-docstrings==0.3.0
+flake8
+flake8-bandit
+flake8-broken-line
+flake8-bugbear
+flake8-commas
+flake8-comprehensions
+flake8-debugger
+flake8-docstrings
+flake8-eradicate
+flake8-html
+flake8-isort
+flake8-quotes
+flake8-rst-docstrings
 flake8-string-format==0.3.0
 gitdb==4.0.10
 GitPython==3.1.31
@@ -38,9 +38,9 @@ packaging==23.1
 pbr==5.11.1
 pep8-naming==0.13.3
 platformdirs==3.6.0
-pluggy==1.0.0
-pycodestyle<2.10.0
-pydocstyle==6.3.0
+pluggy
+pycodestyle
+pydocstyle
 pyflakes<2.6.0
 Pygments==2.15.1
 pyproject-api==1.5.2
@@ -50,9 +50,9 @@ restructuredtext-lint==1.4.0
 rich==13.4.2
 smmap==5.0.0
 snowballstemmer==2.2.0
-stevedore==3.5.2
+stevedore
 types-tqdm==4.65.0.1
 typing_extensions==4.6.3
 tzlocal==5.0.1
-virtualenv==20.23.1
+virtualenv
 wemake-python-styleguide==0.17.0
