--- a/requirements.txt
+++ b/requirements.txt
@@ -1,58 +1,2 @@
-astor==0.8.1
-attrs
-bandit==1.7.5
-cachetools==5.3.1
-chardet==5.1.0
-clickhouse-driver==0.2.6
-colorama==0.4.6
-darglint==1.8.1
-distlib==0.3.6
-docutils==0.20.1
-eradicate==2.3.0
-filelock==3.12.2
 flake8
-flake8-bandit
-flake8-broken-line
-flake8-bugbear
-flake8-commas
-flake8-comprehensions
-flake8-debugger
-flake8-docstrings
-flake8-eradicate
-flake8-html
-flake8-isort
-flake8-quotes
-flake8-rst-docstrings
-flake8-string-format
-gitdb==4.0.10
-GitPython==3.1.31
-isort==6.0.0b2
-Jinja2==3.1.2
-markdown-it-py==2.2.0
-MarkupSafe==2.1.3
-mccabe==0.7.0
-mdurl==0.1.2
-mypy==1.3.0
-mypy-extensions==1.0.0
-packaging==23.1
-pbr==5.11.1
-pep8-naming
-platformdirs==3.6.0
-pluggy
-pycodestyle
-pydocstyle
-pyflakes<2.6.0
-Pygments==2.15.1
-pyproject-api==1.5.2
-pytz==2023.3
-PyYAML==6.0
-restructuredtext-lint==1.4.0
-rich==13.4.2
-smmap==5.0.0
-snowballstemmer==2.2.0
-stevedore
-types-tqdm==4.65.0.1
-typing_extensions==4.6.3
-tzlocal==5.0.1
-virtualenv
-wemake-python-styleguide
+mypy
