mypy action updated

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,13 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        
+    - name: Generate dependencies file
+      run: |
+        python -m pip freeze > dependencies.txt
+
+    - name: Display dependencies
+      run: cat dependencies.txt
 
     - name: Lint with flake8
       run: |
@@ -37,7 +44,9 @@ jobs:
         flake8 module --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     
     - name: Types Checking
-      run: mypy module
+      run: |
+        mypy --install-types
+        mypy module
 
 
   #notification:
