mypy action updated

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,8 +45,7 @@ jobs:
     
     - name: Types Checking
       run: |
-        mypy --install-types
-        mypy module
+        mypy module --install-types 
 
 
   #notification:
