--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,20 +48,20 @@ jobs:
         echo "y" | python -m mypy module/load_entries.py --install-types
 
 
-  #notification:
-    #name: Telegram Notification
-    #runs-on: ubuntu-latest
-    #steps:
+  notification:
+    name: Telegram Notification
+    runs-on: ubuntu-latest
+    steps:
 
-      #- name: Send telegram message on push
-        #uses: appleboy/telegram-action@master
-        #with:
-          #to: ${{ secrets.TELEGRAM_TO }}
-          #token: ${{ secrets.TELEGRAM_TOKEN }}
-          #message: |
-            #${{ github.actor }} created commit:
-            #Commit message: ${{ github.event.commits[0].message }}
+      - name: Send telegram message on push
+        uses: appleboy/telegram-action@master
+        with:
+          to: ${{ secrets.TELEGRAM_TO }}
+          token: ${{ secrets.TELEGRAM_TOKEN }}
+          message: |
+            ${{ github.actor }} created commit:
+            Commit message: ${{ github.event.commits[0].message }}
             
-            #Repository: ${{ github.repository }}
+            Repository: ${{ github.repository }}
             
-            #See changes: https://github.com/${{ github.repository }}/commit/${{github.sha}}
+            See changes: https://github.com/${{ github.repository }}/commit/${{github.sha}}
