--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,8 +44,7 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     
     - name: Types Checking
-      run: |
-        echo "y" | python -m mypy . --install-types
+      run: mypy . --install-types
 
 
   notification:
