--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,8 +43,8 @@ jobs:
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     
-    - name: Types Checking
-      run: mypy . --exclude ugc/src/
+    #- name: Types Checking
+    #  run: mypy . --exclude ugc/src/
 
 
   notification:
