--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,8 @@ services:
     container_name: app
     build:
       context: ./ugc/src
-    ports:
-      - "8001:8001"
+    expose:
+      - 8001
     env_file:
       - ./ugc/src/.env
 
@@ -24,11 +24,8 @@ services:
     image: confluentinc/cp-kafka:7.0.1
     container_name: broker
     hostname: kafka
-
-    ports:
-      # To learn about configuring Kafka for access across networks see
-      # https://www.confluent.io/blog/kafka-client-cannot-connect-to-broker-on-aws-on-docker-etc/
-      - "9092:9092"
+    expose:
+      - 9092
     depends_on:
       - zookeeper
     environment:
@@ -44,8 +41,8 @@ services:
   mongodb_container:
     container_name: mongodb_container
     image: mongo
-    ports:
-      - 27017:27017
+    expose:
+      - 27017
     volumes:
       - mongodb_data_container:/data/db
 
@@ -65,8 +62,8 @@ services:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.14.2
     environment:
       discovery.type: single-node
-    ports:
-      - "9200:9200"
+    expose:
+      - 9200
     volumes:
       - /tmp/esdata:/tmp/elasticsearch/data
 
@@ -75,8 +72,8 @@ services:
     environment:
       ES_HOST: "elasticsearch:9200"
       XPACK_MONITORING_ENABLED: "false"
-    ports:
-      - "5044:5044/udp"
+    expose:
+      - 6379
     volumes:
       - ./filebeat/filebeat.yml:/config/filebeat.yml:ro
     command: logstash -f /config/filebeat.yml
